Fix missing webtactic repo

--- a/php/ng/installed.jinja
+++ b/php/ng/installed.jinja
@@ -60,7 +60,7 @@ php_{{ phpng_version }}_link:
   {% endif %}
 {% endif %}
 
-{% if grains['os_family'] == "RedHat" and grains['osmajorrelease'] == '7' %}
+{% if grains['os_family'] == "RedHat" and grains['osmajorrelease']|string == '7' %}
 {% set use_webtactic = salt['pillar.get']('php:ng:use_webtactic', False) %}
 {% if use_webtactic %}
 webtactic-php-repo_{{ state }}:
